--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Realidad aumentada basada en geolocalización</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githubusercontent.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
-    <script src="https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <title>Realidad aumentada basada en localización</title>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/dist/pose.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/dist/camera_utils.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/dist/drawing_utils.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/dist/holistic.min.js"></script>
   </head>
-  <body>
-    <a-scene gps-camera-debug>
-      <a-entity gps-entity-place="latitude: 37.4219999; longitude: -122.0840575;">
-        <a-entity gltf-model="url(stranger_star.glb)"></a-entity>
-      </a-entity>
+  <body style="margin: 0px; overflow: hidden;">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best; detectionMode: mono_and_matrix; matrixCodeType: 3x3; transparent: true">
+      <a-entity camera></a-entity>
+      <a-gltf-model src="./stranger_star.glb" position="0 0 0" scale="0.1 0.1 0.1"></a-gltf-model>
+      <video id="video" autoplay playsinline style="display:none;" muted></video>
     </a-scene>
     <script>
-      navigator.geolocation.getCurrentPosition(function (position) {
-        var latitude = position.coords.latitude;
-        var longitude = position.coords.longitude;
-        document.querySelector('a-scene').setAttribute('gps-camera', 'latitude: ' + latitude + '; longitude: ' + longitude + ';');
+      var video = document.getElementById('video');
+
+      navigator.mediaDevices.getUserMedia({
+        video: true,
+        audio: false
+      })
+      .then(function(stream) {
+        video.srcObject = stream;
+        video.play();
+      })
+      .catch(function(err) {
+        console.log('Error al inicializar la cámara: ', err);
       });
     </script>
   </body>
