--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Realidad aumentada basada en localización</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/dist/pose.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/dist/camera_utils.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/dist/drawing_utils.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/dist/holistic.min.js"></script>
+    <meta charset="utf-8">
+    <title>AR Geolocalización</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
   </head>
-  <body style="margin: 0px; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best; detectionMode: mono_and_matrix; matrixCodeType: 3x3; transparent: true">
+  <body>
+    <a-scene embedded arjs>
+      <a-assets>
+        <a-asset-item id="model" src="stranger_star.glb"></a-asset-item>
+      </a-assets>
+      <a-marker preset="hiro">
+        <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="#model"></a-entity>
+      </a-marker>
       <a-entity camera></a-entity>
-      <a-gltf-model src="./stranger_star.glb" position="0 0 0" scale="0.1 0.1 0.1"></a-gltf-model>
-      <video id="video" autoplay playsinline style="display:none;" muted></video>
     </a-scene>
     <script>
-      var video = document.getElementById('video');
-
-      navigator.mediaDevices.getUserMedia({
-        video: true,
-        audio: false
-      })
-      .then(function(stream) {
-        video.srcObject = stream;
-        video.play();
-      })
-      .catch(function(err) {
-        console.log('Error al inicializar la cámara: ', err);
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var latitude = position.coords.latitude;
+        var longitude = position.coords.longitude;
+        var altitude = position.coords.altitude;
+        var sceneEl = document.querySelector('a-scene');
+        sceneEl.setAttribute('gps-camera', 'latitude:' + latitude + '; longitude:' + longitude + '; altitude:' + altitude + ';');
       });
     </script>
   </body>
