--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>AR Geolocalización</title>
+    <meta charset="UTF-8">
+    <title>AR Web App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
-    <a-scene embedded arjs>
+    <a-scene>
       <a-assets>
         <a-asset-item id="model" src="stranger_star.glb"></a-asset-item>
       </a-assets>
-      <a-marker preset="hiro">
-        <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="#model"></a-entity>
-      </a-marker>
-      <a-entity camera></a-entity>
+      <a-camera position="0 1.6 0" look-controls>
+        <a-entity cursor="fuse: true; fuseTimeout: 500"
+                  position="0 0 -1"
+                  geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+                  material="color: black; shader: flat">
+        </a-entity>
+      </a-camera>
+      <a-marker-camera preset="hiro">
+        <a-entity id="3d-model" gltf-model="#model" scale="0.5 0.5 0.5"></a-entity>
+      </a-marker-camera>
     </a-scene>
+
     <script>
-      navigator.geolocation.getCurrentPosition(function(position) {
-        var latitude = position.coords.latitude;
-        var longitude = position.coords.longitude;
-        var altitude = position.coords.altitude;
-        var sceneEl = document.querySelector('a-scene');
-        sceneEl.setAttribute('gps-camera', 'latitude:' + latitude + '; longitude:' + longitude + '; altitude:' + altitude + ';');
-      });
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          const model = document.querySelector('#model');
+          model.setAttribute('position', `${lat} 0 ${lon}`);
+        });
+      } else {
+        alert("La geolocalización no está habilitada en este dispositivo.");
+      }
     </script>
   </body>
 </html>
