--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="model" src="stranger_star.glb"></a-asset-item>
+        <a-asset-item id="model" src="url(stranger_star.glb)"></a-asset-item>
       </a-assets>
       <a-camera position="0 1.6 0" look-controls>
         <a-entity cursor="fuse: true; fuseTimeout: 500"
