--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>AR Web App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <meta charset="utf-8">
+    <title>Realidad Aumentada con AR.js</title>
   </head>
   <body>
-    <a-scene>
-      <a-assets>
-        <a-asset-item id="model" src=".\stranger_star.glb"></a-asset-item>
-      </a-assets>
-      <a-camera position="0 1.6 0" look-controls>
-        <a-entity cursor="fuse: true; fuseTimeout: 500"
-                  position="0 0 -1"
-                  geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
-                  material="color: black; shader: flat">
-        </a-entity>
-      </a-camera>
-      <a-marker-camera preset="hiro">
-        <a-entity id="3d-model" gltf-model="#model" scale="0.5 0.5 0.5"></a-entity>
-      </a-marker-camera>
+    <a-scene embedded arjs="sourceType: webcam;">
+      <a-entity
+        id="marker"
+        geometry="primitive: plane"
+        material="opacity: 0"
+        position="0 0 -1"
+      ></a-entity>
+      <a-entity
+        gltf-model="stranger_star.glb"
+        scale="0.1 0.1 0.1"
+        position="0 0 0"
+      ></a-entity>
+      <a-entity camera></a-entity>
     </a-scene>
-
+    <script src="./js/ar.js"></script>
     <script>
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          const lat = position.coords.latitude;
-          const lon = position.coords.longitude;
-          const model = document.querySelector('#model');
-          model.setAttribute('position', `${lat} 0 ${lon}`);
+      document.addEventListener('DOMContentLoaded', function () {
+        var marker = document.getElementById('marker');
+        var model = document.querySelector('a-entity[gltf-model]');
+        var initialScale = model.getAttribute('scale');
+
+        var scene = document.querySelector('a-scene');
+        scene.addEventListener('mousedown', function (event) {
+          marker.setAttribute('position', event.detail.intersection.point);
+          model.setAttribute('position', marker.getAttribute('position'));
+          model.setAttribute('scale', initialScale);
         });
-      } else {
-        alert("La geolocalización no está habilitada en este dispositivo.");
-      }
+      });
     </script>
   </body>
 </html>
