--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <a-entity camera></a-entity>
     </a-scene>
     <script src="./js/ar.js"></script>
+    <script src="./js/aframe-ar.js"></script>
+    <script src="./js/aframe.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         var marker = document.getElementById('marker');
