--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Realidad Aumentada con AR.js</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="./js/aframe-ar.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/ar.js"></script>
+    <script src="js/aframe.min.js"></script>
+    <script src="js/aframe-ar.js"></script>
   </head>
   <body>
     <a-scene embedded arjs="sourceType: webcam;">
