--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Realidad Aumentada con AR.js</title>
-    <script src="js/three.js"></script>
+    <script src="js/three.min.js"></script>
     <script src="js/ar.js"></script>
     <script src="js/aframe.min.js"></script>
     <script src="js/aframe-ar.js"></script>
