--- a/index.html
+++ b/index.html
@@ -1,48 +1,28 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Realidad Aumentada con AR.js</title>
-    <script src="js/three.min.js"></script>
-    <script src="js/ar.js"></script>
-    <script src="js/aframe.min.js"></script>
-    <script src="js/aframe-ar.js"></script>
-  </head>
-  <body>
-    <a-scene embedded arjs="sourceType: webcam;">
-      <a-entity
-        id="marker"
-        geometry="primitive: plane"
-        material="opacity: 0"
-        position="0 0 -1"
-        arjs-anchor="preset: custom;"
-      ></a-entity>
-      <a-entity
-        gltf-model="stranger_star.glb"
-        scale="0.1 0.1 0.1"
-        position="0 0 0"
-      ></a-entity>
-      <a-entity camera></a-entity>
-    </a-scene>
-    <script>
-      // Esperar a que se cargue la escena
-      document.addEventListener("DOMContentLoaded", function () {
-        // Obtener referencias a los elementos relevantes
-        var marker = document.getElementById("marker");
-        var camera = document.querySelector("a-entity[camera]");
-    
-        // Agregar un controlador de eventos touchstart a la escena
-        var scene = document.querySelector("a-scene");
-        scene.addEventListener("touchstart", function (e) {
-          // Obtener la posición de intersección entre el rayo de la cámara y la superficie del mundo real
-          var intersection = camera.components.raycaster.intersectWithWorld(e.detail.touches[0].clientX, e.detail.touches[0].clientY);
-    
-          // Si se encontró una intersección, actualizar la posición del marcador
-          if (intersection) {
-            marker.setAttribute("position", intersection.x + " " + intersection.y + " " + intersection.z);
-          }
-        });
-      });
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>Hello WebXR!</title>
+
+  <!-- three.js -->
+  <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
+</head>
+<body>
+
+<!-- Starting an immersive WebXR session requires user interaction.
+    We start this one with a simple button. -->
+<button onclick="activateXR()">Start Hello WebXR</button>
+<script>
+async function activateXR() {
+  // Add a canvas element and initialize a WebGL context that is compatible with WebXR.
+  const canvas = document.createElement("canvas");
+  document.body.appendChild(canvas);
+  const gl = canvas.getContext("webgl", {xrCompatible: true});
+
+  // To be continued in upcoming steps.
+}
+</script>
+</body>
 </html>
