--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ async function activateXR() {
   const camera = new THREE.PerspectiveCamera();
   camera.matrixAutoUpdate = false;
 }
+// Initialize a WebXR session using "immersive-ar".
+const session = await navigator.xr.requestSession("immersive-ar");
+session.updateRenderState({
+  baseLayer: new XRWebGLLayer(session, gl)
+});
+
+// A 'local' reference space has a native origin that is located
+// near the viewer's position at the time the session was created.
+const referenceSpace = await session.requestReferenceSpace('local');
 </script>
 </body>
 </html>
